# voxel

./: .gitignore  Cargo.toml
.codeassistant/: mcp.json
crates/engine/: Cargo.toml
crates/engine/src/: app.rs  app_runner.rs  cursor.rs  input.rs  lib.rs  logger.rs  runner.rs
engine/src/: cursor.rs  input.rs  lib.rs  traits.rs
engine/src/model/: vertex.rs
engine/src/render/: bitmap_font.rs  camera.rs  image.rs  light.rs  mod.rs  text.rs  (+4 more)
game/: Cargo.toml
game/mods/example_mod/: init.lua
game/src/: blocks.rs  game.rs  game_state.rs  input.rs  main.rs  player.rs  texture_loader.rs  voxel_world.rs  world_gen.rs
game/src/blocks/: dirt.rs  grass.rs  stone.rs
game/src/common/: block.rs  block_registry.rs  mod.rs
game/src/modding/: mod_loader.rs
game/src/systems/: input_system.rs  mod.rs  raycast.rs  render_system.rs  ui_system.rs
game/src/ui/: colors.rs  containers.rs  elements.rs  engine_ext.rs  hud.rs  inventory.rs  layout.rs  manager.rs  mod.rs  widget.rs
game/src/world/: block.rs  chunk.rs  chunk_manager.rs  world.rs
game/src/world_old/: block_registry.rs  chunk.rs  chunk_mesh_manager.rs  world.rs
mods/: README.md
src/: app.rs  game.rs  game_state.rs  img_utils.rs  main.rs  player.rs  shader.wgsl  wgpu_ctx.rs
src/blocks/: air.rs  mod.rs
src/common/: block.rs  block_registry.rs
src/engine/: app.rs  app_runner.rs  cursor.rs  mod.rs  runner.rs
src/modding/: lua_block.rs  mod.rs
src/model/: cube.rs  mesh.rs  mod.rs  vertex.rs
src/render/: camera.rs  light.rs  mod.rs  profiler.rs  renderer.rs  texture_manager.rs
src/systems/: input_system.rs  raycast.rs  render_system.rs  ui_system.rs
src/ui/: hud.rs  inventory.rs  mod.rs
src/utils/: img.rs
src/world/: block.rs  block_registry.rs  chunk.rs  chunk_manager.rs  chunk_mesh_manager.rs  mod.rs  render.rs  shader.wgsl  shadow.wgsl  world.rs
(+32 files in other folders)
