[package]
name = "ch05_texture_and_bind_group"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.30.8" }
pollster = { version = "0.4" }
wgpu = { version = "24.0.1" }
bytemuck = "1.21.0"
image = "0.25.5"
glam = "*"
strum_macros="0.27.1"
strum="0.27.1"
rand="0.9.0"
tokio = { version = "1.43.0", features = ["full"] }
noise = "*"
rayon="*"