[package]
name = "voxel_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.30.8" }
glam = "*"
noise = "*"
bytemuck = "1.21.0"
image = "0.25.5"
strum_macros = "0.27.1"
strum = "0.27.1"
rand = "0.9.0"
tokio = { version = "1.43.0", features = ["full"] }
rayon = "*"
wide = "*"
wgpu = { version = "24.0.1" }
pollster = { version = "0.4" }
mlua = { version = "0.9", features = ["lua54", "vendored"] }